--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
 <body class="{{ if .IsPage }}single-page{{ else }}list-page{{ end }}{{ if .IsHome }} front{{ end }}{{ with $.Param "bodyclass" }} {{ . }}{{ end }}">
 <div class="page layout__page{{ if $.Param "sidebar" }} layout__sidebar-second{{ end }}">
 <header class="header layout__header">
+<div class="header__brand">
 {{ if $.Param "logo" | default true -}}
 <a href="{{ "" | relLangURL }}" title="Home" rel="home" class="header__logo">
 {{ $src := ($.Param "logoPath") | default "images/logo.png" -}}
@@ -44,6 +45,7 @@
 {{- (printf "<%s class=\"header__site-name\">" $pageTitleElement | safeHTML) -}}
 <a href="{{ "/" | relLangURL }}" title="Home" class="header__site-link" rel="home"><span>{{ site.Title }}</span></a>
 {{- (printf "</%s>" $pageTitleElement | safeHTML) -}}
+</div>
 <div class="region header__region">
 {{ if site.IsMultiLingual }}{{ partial "language-selector.html" . }}{{ end -}}
 {{ if $.Param "menuinheader" }}{{ partial "menu.html" . }}{{ end -}}
