Fix title length with long page title
When the combination of page and site title is too long, just use the
page title.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,9 @@
-{{ define "title" }}{{ if .IsHome }}{{ site.Title }}{{ else }}{{ .Title }} – {{ site.Title }}{{ end }}{{ end }}
+{{ define "title" }}
+{{- $pageTitle := printf "%s - %s" .Title site.Title -}}
+{{- if gt (len $pageTitle) 70 -}}
+{{- $pageTitle = .Title -}}
+{{- end -}}
+{{- if .IsHome }}{{ site.Title }}{{ else }}{{ $pageTitle }}{{ end }}{{ end }}
 
 {{ define "main" -}}
 {{- $pctx := . -}}
