--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>{{ block "title" . }}{{ .Title }} – {{ site.Title }}{{ end }}</title>
+<title>{{ block "title" . }}{{- $pageTitle := printf "%s - %s" .Title site.Title -}}
+  {{- if gt (len $pageTitle) 70 -}}
+  {{- $pageTitle = .Title -}}
+  {{- end -}}
+  {{- $pageTitle -}}{{ end }}</title>
 {{ partial "meta.html" . }}
 {{ partialCached "styles.html" . }}
 {{- block "head" . }}{{ end }}
@@ -13,6 +17,10 @@
 {{ if $.Param "math" }}{{ partialCached "math.html" . }}{{ end -}}
 </head>
 
+{{ $pageTitle := printf "%s - %s" .Title site.Title -}}
+{{ if gt (len $pageTitle) 70 -}}
+{{ $pageTitle = .Title -}}
+{{ end -}}
 <body class="{{ if .IsPage }}single-page{{ else }}list-page{{ end }}{{ if .IsHome }} front{{ end }}{{ with $.Param "bodyclass" }} {{ . }}{{ end }}">
 <div class="page layout__page{{ if $.Param "sidebar" }} layout__sidebar-second{{ end }}">
 <header class="header layout__header">
@@ -38,13 +46,13 @@
 <img src="{{ $finalImage.src }}"{{ with $logoWidth }} width="{{ $logoWidth }}"{{ end }}{{ with $logoHeight }} height="{{ $logoHeight }}"{{ end }}{{ with .Title}} title="{{ . }}"{{ end }} alt="Home"  class="header__logo-image">
 </a>
 {{ end -}}
-{{- $pageTitleElement := "div" -}}
+{{- $headerTitleElement := "div" -}}
 {{- if .IsHome -}}
-{{- $pageTitleElement = "h1" -}}
+{{- $headerTitleElement = "h1" -}}
 {{- end -}}
-{{- (printf "<%s class=\"header__site-name\">" $pageTitleElement | safeHTML) -}}
+{{- (printf "<%s class=\"header__site-name\">" $headerTitleElement | safeHTML) -}}
 <a href="{{ "/" | relLangURL }}" title="Home" class="header__site-link" rel="home"><span>{{ site.Title }}</span></a>
-{{- (printf "</%s>" $pageTitleElement | safeHTML) -}}
+{{- (printf "</%s>" $headerTitleElement | safeHTML) -}}
 </div>
 <div class="region header__region">
 {{ if site.IsMultiLingual }}{{ partial "language-selector.html" . }}{{ end -}}
