--- a/assets/sass/_zen.scss
+++ b/assets/sass/_zen.scss
@@ -1,5 +1,195 @@
 // Zen custom styles
 
+// DFD custom styles
+
+.presentation-pdf {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.resume-pdf,
+.poster-pdf {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.resume-pdf-iframe,
+.poster-pdf-iframe {
+  height: calc(1.4 * (100% - 1rem));
+  max-width: 100%;
+  min-height: 490px;
+  min-width: 360px;
+  width: 100%;
+}
+
+.presentation-pdf-iframe {
+  height: calc(.9 * (100% - 1rem));
+  max-width: 100%;
+  min-height: 240px;
+  min-width: 360px;
+  width: 100%;
+}
+
+@media screen and (min-width: 48rem) {
+  .resume-pdf-iframe,
+  .poster-pdf-iframe {
+    height: calc(1.34 * 26rem);
+  }
+
+  .presentation-pdf-iframe {
+    height: calc(.85 * 26rem);
+  }
+}
+
+@media screen and (min-width: 84rem) {
+  .resume-pdf-iframe,
+  .poster-pdf-iframe {
+    height: calc(1.1 * 40rem);
+  }
+
+  .presentation-pdf-iframe {
+    height: calc(.66 * 40rem);
+  }
+}
+
+.image.about-photo {
+  display: block;
+  float: left;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  margin-top: 0;
+}
+
+.image.side-by {
+  display: inline-block;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  margin-top: .4em;
+  max-width: 49%;
+  vertical-align: middle;
+
+  ~ p {
+    display: inline-block;
+    max-width: 49%;
+  }
+}
+
+li > p {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.main .introduction-card {
+  align-self: flex-start;
+  flex: 1 1 45%;
+  margin-bottom: 1rem;
+}
+
+.main .introduction-card a,
+.main .about-photo a {
+  display: block;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.main .introduction-card img,
+.main .about-photo img {
+  border: 1px solid var(--color-brand);
+  display: block;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.main .about-photo {
+  flex: 1 1 45%;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.two-image-wrapper {
+  align-content: flex-start;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  height: max-content;
+  width: 100%;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 48em) {
+  .two-image-wrapper {
+    align-content: space-between;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+
+  .main .about-photo {
+    margin-right: 1rem;
+  }
+}
+
+@media screen and (min-width: 48em) {
+  .two-image-wrapper {
+    align-content: space-between;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+  }
+
+  .main .about-photo {
+    margin-right: 1rem;
+  }
+}
+
+.main .content li sup a {
+  min-height: unset;
+  min-width: unset;
+}
+
+.main .content li a {
+  display: inline-block;
+  min-height: 40px;
+  min-width: 40px;
+}
+
+.side-by-figure.image {
+  display: inline-block;
+  vertical-align: top;
+  width: 45%;
+}
+
+.side-by-figure.image a {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.side-by-figure.image img {
+  height: auto;
+  width: 100%;
+}
+
+.image.half-width {
+  width: 50%;
+}
+
+.image.three-quarter-width {
+  width: 75%;
+}
+
+.header .header {
+  &__brand {
+    max-width: 75%;
+  }
+}
+
+article .highlight .chroma {
+  background-color: var(--color-code-bg);
+}
+
 // Page
 
 body {
@@ -244,7 +434,7 @@ figure {
   &__brand {
     display: flex;
     flex: 1 1 100%;
-    max-width: 82%;
+    max-width: 75%;
   }
 
   &__logo {
@@ -415,11 +605,6 @@ pre code {
   white-space: pre-wrap;
 }
 
-li > p {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
 .main .highlight > .chroma > code {
   white-space: pre-wrap;
 }
@@ -470,14 +655,6 @@ main table tr td:last-of-type {
 
 main table tbody tr:nth-of-type(even) {
   background-color: var(--color-backdrop);
-}
-
-.image.half-width {
-  width: 50%;
-}
-
-.image.three-quarter-width {
-  width: 75%;
 }
 
 .content--endnote {
