Improve list and single page layouts
We improve list pages by choosing where contents vs section things go,
add home page cards and section card,
and do a proper hierarchy walk.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>{{ block "title" . }}{{- $pageTitle := printf "%s - %s" .Title site.Title -}}
+<title>{{ block "title" . }}{{- $pageTitle := .Title -}}
   {{- if gt (len ($pageTitle | htmlEscape)) 70 -}}
-  {{- $pageTitle = .Title -}}
+    {{- errorf "%s title '%'s > 70 characters" .TranslationKey $pageTitle -}}
   {{- end -}}
-  {{- $pageTitle -}}{{ end }}</title>
+  {{- $pageTitle = .Title -}}
+{{- $pageTitle -}}{{ end }}</title>
 {{ partial "meta.html" . }}
 {{ partialCached "styles.html" . }}
 {{- block "head" . }}{{ end }}
@@ -17,10 +18,6 @@
 {{ if $.Param "math" }}{{ partialCached "math.html" . }}{{ end -}}
 </head>
 
-{{ $pageTitle := printf "%s - %s" .Title site.Title -}}
-{{ if gt (len ($pageTitle | htmlEscape)) 70 -}}
-{{ $pageTitle = .Title -}}
-{{ end -}}
 <body class="{{ if .IsPage }}single-page{{ else }}list-page{{ end }}{{ if .IsHome }} front{{ end }}{{ with $.Param "bodyclass" }} {{ . }}{{ end }}">
 <div class="page layout__page{{ if $.Param "sidebar" }} layout__sidebar-second{{ end }}">
 <header class="header layout__header">
