--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,57 +1,78 @@
 {{ define "title" }}
-{{- $pageTitle := printf "%s - %s" .Title site.Title -}}
+{{- $pageTitle := .Title -}}
 {{- if gt (len ($pageTitle | htmlEscape)) 70 -}}
-{{- $pageTitle = .Title -}}
+  {{- errorf "%s title '%'s > 70 characters" .TranslationKey $pageTitle -}}
 {{- end -}}
-{{- if .IsHome }}{{ site.Title }}{{ else }}{{ $pageTitle }}{{ end }}{{ end }}
+{{- $pageTitle = .Title -}}
+{{- if .IsHome }}{{ site.Title }}{{ else }}{{ $pageTitle }}{{ end }}
+{{- end -}}
 
 {{ define "main" -}}
-{{- $pctx := . -}}
-{{- $showChildPages := (cond (isset .Params "showchildpages") (.Params.showChildPages) (cond (isset site.Params "showchildpages") (site.Params.showChildPages) true))  -}}
+{{- $pmctx := . -}}
+{{- $showChildPages := (cond (isset .Params "showchildpages") (.Params.showChildPages) (cond (isset site.Params "showchildpages") (site.Params.showChildPages) true)) -}}
 {{- if .IsHome -}}
   {{- $showChildPages = or (cond (isset .Params "showchildpages") (.Params.showChildPages) false) (cond (isset site.Params "showchildpages") (site.Params.showChildPages) false) -}}
 {{- end -}}
 
 {{- $showChildCards := or (.Param "showChildCards") false -}}
+{{- $showChildCardsTop := or (.Param "showChildCardsTop") false -}}
 
 <main class="main layout__main">
 {{ if not .IsHome -}}
   <h1 class="title">{{ .Title }}</h1>
+{{ else -}}
+{{ with (.Param "subtitle") }}<h2 class="subtitle">{{ . }}</h2>{{ end }}
 {{- end }}
 
-{{ with .Content }}
-<div class="content">
-{{ . }}
+{{- $frontCardPages := (((partial "helpers/find-all-sub-pages-including-section.html" site.Home.Page).ByPublishDate).Reverse).ByWeight -}}
+{{- if $pmctx.IsHome -}}
+  {{- if $showChildCardsTop }}
+<div class="cards">
+    {{ range where $frontCardPages "Params.frontCard" "eq" true }}
+      {{ partial "card.html" (dict "Page" . "Caller" $pmctx) -}}
+    {{ end -}}
 </div>
-
-{{ with $pctx.Param "page_endnote" -}}
-<div class="content content--endnote">
-{{ . | $pctx.RenderString }}
+  {{- end }}
+{{- else -}}
+{{- if $showChildCardsTop }}
+{{- $frontCardPages := (((partial "helpers/find-all-sub-pages-including-section.html" $pmctx).ByPublishDate).Reverse).ByWeight -}}
+<div class="cards">
+    {{ range where $frontCardPages "Params.card" "eq" true }}
+      {{ partial "card.html" (dict "Page" . "Caller" $pmctx) -}}
+    {{ end -}}
 </div>
-{{ end -}}
+  {{- end }}
+{{- end -}}
 
-<div class="content content--bottom">
-  {{ if ne $pctx.Lastmod $pctx.PublishDate }}{{ partial "dates.html" $pctx }}{{ end -}}
-</div>
-{{ end }}
+{{- if ne ($pmctx.Param "bottomContent") true -}}
+  {{ partial "page-content.html" $pmctx -}}
+{{- end -}}
 
-{{- $pages := $pctx.Data.Pages -}}
-{{- if $pctx.IsHome -}}
-{{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
+{{- $pages := $pmctx.Data.Pages -}}
+{{- $cardPages := (((partial "helpers/find-all-sub-pages-including-section.html" $pmctx).ByPublishDate).Reverse).ByWeight -}}
+{{- if $pmctx.IsHome -}}
+  {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{- end -}}
 {{- if $showChildCards -}}
 <div class="cards">
-{{ range where $pages "Params.card" "eq" true }}
-  {{ partial "card.html" (dict "Page" . "Caller" $pctx) -}}
-{{ end -}}
+  {{ range where $cardPages "Params.card" "eq" true }}
+    {{ partial "card.html" (dict "Page" . "Caller" $pmctx) -}}
+  {{ end -}}
 </div>
-{{- else if $showChildPages }}
-{{- $paginator := .Paginate $pages -}}
-{{- range $paginator.Pages -}}
-{{ partial "summary.html" (dict "Page" . "Caller" $pctx) }}
 {{ end -}}
+{{ if $showChildPages -}}
+  {{ with $pmctx -}}
+    {{- $paginator := .Paginate .Data.Pages -}}
+    {{- range $paginator.Pages -}}
+      {{ partial "summary.html" (dict "Page" . "Caller" $pmctx) }}
+    {{ end -}}
 
-{{ partial "pagination.html" . }}
+    {{ partial "pagination.html" . }}
+  {{ end -}}
 {{ end }}
+
+{{- if eq ($pmctx.Param "bottomContent") true -}}
+  {{ partial "page-content.html" $pmctx -}}
+{{- end -}}
 </main>
 {{ end }}
