--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,6 +7,14 @@
 {{ if .Params.tags }}{{ partial "tags.html" . }}{{ end -}}
 </header>
 <div class="content">
+{{ if and (.Param "toc") (not (.HasShortcode "details-toc")) }}
+<details>
+  <summary>What is in this article</summary>
+  <div class="toc">
+  {{- .Page.TableOfContents -}}
+  </div>
+</details>
+{{ end }}
 {{ .Content }}
 </div>
 
