Fix typo in comment from upstream
Cosmetic but pre-commit complains if I don't fix it or add an ignore.

--- a/assets/sass/base/forms/_forms.scss
+++ b/assets/sass/base/forms/_forms.scss
@@ -45,7 +45,7 @@ textarea {
   width: Min(30em, 100%);
 }
 
-// For forms with multibple fields show submit button below the form.
+// For forms with multiple fields show submit button below the form.
 input:not(:only-of-type),
 textarea {
   & + [type='submit'] {
