Fix finding non-page resources in project assets
Fix the glob generation and match so that we can actually find and link
the non-page resource.

--- a/layouts/partials/helpers/get-link-destination.html
+++ b/layouts/partials/helpers/get-link-destination.html
@@ -73,7 +73,8 @@
       {{- $linkResource = $page.CurrentSection.Resources.GetMatch $destination -}}
     {{- end -}}
     {{- if not $linkResource -}}
-      {{- $linkResource = resources.GetMatch $destination -}}
+      {{- $destinationPath := strings.TrimLeft "/" $destination -}}
+      {{- $linkResource = resources.GetMatch (printf "%s%s%s" "*" $destinationPath "*") -}}
     {{- end -}}
     {{- if $linkResource -}}
       {{- $finalDestination = $linkResource.RelPermalink -}}
