--- a/assets/sass/base/grouping/_grouping.scss
+++ b/assets/sass/base/grouping/_grouping.scss
@@ -59,14 +59,13 @@ li {
   }
 }
 
-
 // Figures
 
 figure {
   // Add vertical rhythm margins.
   @include margin-block(1);
 
-  // Remove defult inline margins.
+  // Remove default inline margins.
   @include margin-inline(0);
 }
 
