--- a/layouts/partials/helpers/find-ordered-pages.html
+++ b/layouts/partials/helpers/find-ordered-pages.html
@@ -3,21 +3,21 @@
 {{- $pctx := .Page -}}
 {{- $pagesIn := .Pages -}}
 {{- $ignoreWeight := .ignoreWeight | default false -}}
-{{- $omitableList := .omitableList | default false -}}
+{{- $omittableList := .omittableList | default false -}}
 {{- $pagesOldestFirst := .pagesOldestFirst -}}
 {{- with $pagesIn -}}
   {{- $siblingsTop := (.ByWeight).GroupBy "Weight" -}}
   {{- if $ignoreWeight -}}
     {{- $siblings = $siblings | append (partial "helpers/sort-pages-by-date.html" (dict
       "Pages" .
-      "omitableList" $omitableList
+      "omittableList" $omittableList
       "pagesOldestFirst" $pagesOldestFirst
     )) }}
   {{- else -}}
     {{- range $siblingsTop -}}
       {{- $siblings = $siblings | append (partial "helpers/sort-pages-by-date.html" (dict
         "Pages" .
-        "omitableList" $omitableList
+        "omittableList" $omittableList
         "pagesOldestFirst" $pagesOldestFirst
       )) }}
       {{- end -}}
