Tweak content and sidebar lists
For lists in content (e.g. Markdown) break words anywhere if the lines
can't be made to fit by moving long words to another line, and this
is supported by the browser. Otherwise break words on the usual word
breaks opportunities like hyphens or the new '<wbr>' tag.

Use the upstream Zen theme's 'ul-straight-left' list formatting for the
sidebar menus  rather than for every 'aside' element.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/assets/sass/_zen.scss
+++ b/assets/sass/_zen.scss
@@ -192,6 +192,28 @@ li > p {
   }
 }
 
+.sidebar .menu {
+  background-color: var(--color-brand-light);
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding-bottom: .1rem;
+  padding-left: var(--gutters);
+  padding-right: var(--gutters);
+  padding-top: .1rem;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
+  ul {
+    @extend %ul-straight-left;
+  }
+}
+
 // Zen: Page
 
 body {
@@ -238,12 +260,6 @@ label {
 }
 
 // Zen: Article and content.
-
-aside {
-  ul {
-    @extend %ul-straight-left;
-  }
-}
 
 article {
   .submitted,
@@ -491,28 +507,6 @@ figure {
   background-color: var(--color-backdrop);
 }
 
-// DFD-Zen overrides
-
-.sidebar {
-  .menu {
-    background-color: var(--color-brand-light);
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    padding-bottom: .1rem;
-    padding-left: var(--gutters);
-    padding-right: var(--gutters);
-    padding-top: .1rem;
-
-    &:first-of-type {
-      margin-top: 0;
-    }
-
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-  }
-}
-
 // DFD-Zen additions
 
 .toc {
@@ -715,12 +709,19 @@ menu {
 .main .content {
   ol,
   ul {
-    width: 100%;
-
     & > li {
-      width: 100%;
       overflow-wrap: break-word;
-      overflow-wrap: anywhere;
+    }
+  }
+}
+
+@supports (overflow-wrap: anywhere) {
+  .main .content {
+    ol,
+    ul {
+      & > li {
+        overflow-wrap: anywhere;
+      }
     }
   }
 }
