--- a/assets/sass/_zen.scss
+++ b/assets/sass/_zen.scss
@@ -523,39 +523,83 @@ figure {
 
 .content .sitemap-view {
   ul {
+    box-sizing: border-box;
     display: block;
+    list-style-position: inside;
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
     width: 100%;
 
-    li {
-      margin-left: 0;
-
-      &::before {
-        content: '';
-      }
+    > li {
+      box-sizing: border-box;
+      list-style-position: inside;
+      list-style-type: none;
 
       > a {
+        box-sizing: border-box;
         display: block;
+        padding: .4em;
         text-decoration: none;
 
         &:active,
         &:hover {
-          background-color: var(--color-link-hover);
+          box-sizing: border-box;
+        }
+
+        span {
+          box-sizing: border-box;
+
+          &:active,
+          &:hover {
+            box-sizing: border-box;
+          }
+        }
+      }
+
+      &:not(section-list-item) > a {
+        &:hover,
+        &:active {
           color: var(--color-text-bg);
         }
+
+        &:active {
+          background-color: var(--color-link-active);
+        }
+
+        &:hover {
+          background-color: var(--color-link-hover);
+        }
+      }
+    }
+
+    ul .section-list-item {
+      padding-inline-start: 2em;
+
+      /* stylelint-disable-next-line selector-max-compound-selectors */
+      ul .section-list-item {
+        padding-inline-start: 2em;
       }
     }
   }
 
-  > ul > li > a {
-    background-color: var(--color-backdrop);
-    border-style: solid;
-    border-width: 1px;
-    margin-bottom: .8rem;
-    margin-top: .2rem;
-    padding-bottom: .2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .3rem;
+  a.section-link {
+    background-color: var(--color-brand-light);
+    border: 1px solid var(--color-border);
+    margin-bottom: .4em;
+
+    &:hover,
+    &:active {
+      color: var(--color-text-bg);
+    }
+
+    &:active {
+      background-color: var(--color-link-active);
+    }
+
+    &:hover {
+      background-color: var(--color-link-hover);
+    }
   }
 }
 
@@ -618,7 +662,12 @@ pre code {
 .main .highlight > .chroma > code > span {
   word-break: break-all;
   overflow-wrap: break-word;
-  overflow-wrap: anywhere;
+}
+
+@supports (overflow-wrap: anywhere) {
+  .main .highlight > .chroma > code > span {
+    overflow-wrap: anywhere;
+  }
 }
 
 // DFD-Zen overrides
