Do not print collapsed table of contents
When creating the printed version of a page, do not display the
collapsed table of contents.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/shortcodes/details-toc.html
+++ b/layouts/shortcodes/details-toc.html
@@ -1,4 +1,4 @@
-<details>
+<details class="print-none">
   <summary>What is in this article</summary>
   <div class="toc">
   {{- .Page.TableOfContents -}}
