--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,8 +1,8 @@
 {{ if not (eq .TranslationKey "404") -}}
   {{ if not .Description -}}
     {{ warnf "Page '%s' does not have a description" .TranslationKey }}
-  {{ else if lt (len .Description) 50  -}}
-    {{ warnf "Page '%s' description less than 50 characters" .TranslationKey }}
+  {{ else if lt (len .Description) 100  -}}
+    {{ warnf "Page '%s' description less than 100 characters" .TranslationKey }}
   {{ else if gt (len .Description) 160  -}}
     {{ warnf "Page '%s' description more than 160 characters" .TranslationKey }}
   {{ end -}}
@@ -42,10 +42,14 @@
 <meta name="theme-color" content="{{ $.Param "themecolor" | default "#ffffff" }}">
 {{ with site.Params.piwikTrackerUrl }}<link rel="dns-prefetch" href="https://{{ . }}">{{ end }}
 {{ with $.Param "microusername" }}<link rel="me" href="https://micro.blog/{{ . }}">{{ end }}
+{{- $defaultCanonical := .Permalink -}}
+{{- if isset site.Params "defaultcanonical" -}}
+  {{- $defaultCanonical = replace .Permalink site.BaseURL site.Params.defaultCanonical -}}
+{{- end -}}
 {{- if not (or (isset .Params "pagecanonical") (isset site.Params "pagecanonical")) -}}
-<link rel="canonical" href="{{ .Permalink }}">
+<link rel="canonical" href="{{ $defaultCanonical }}">
 {{- else if $.Param "pageCanonical" -}}
-<link rel="canonical" href="{{ .Permalink }}">
+<link rel="canonical" href="{{ $defaultCanonical }}">
 {{- else if $.Param "toCanonical" -}}
 <link rel="canonical" href="{{ $.Param "toCanonical" }}">
 {{- end -}}
