--- a/layouts/partials/meta_json_ld.html
+++ b/layouts/partials/meta_json_ld.html
@@ -1,8 +1,8 @@
 {{ if not (eq .TranslationKey "404") -}}
   {{ if not .Description -}}
     {{ warnf "Page '%s' does not have a description" .TranslationKey }}
-  {{ else if lt (len .Description) 50  -}}
-    {{ warnf "Page '%s' description less than 50 characters" .TranslationKey }}
+  {{ else if lt (len .Description) 110  -}}
+    {{ warnf "Page '%s' description less than 110 characters" .TranslationKey }}
   {{ else if gt (len .Description) 160  -}}
     {{ warnf "Page '%s' description more than 160 characters" .TranslationKey }}
   {{ end -}}
@@ -12,6 +12,7 @@
     "@context": "https://schema.org",
     {{ if .IsPage -}}
     "@type": {{ if or (eq .Section "blog") (eq .Section "post") }}"BlogPosting"{{ else }}"WebPage"{{ end }},
+    {{ if not (or (eq .Section "blog") (eq .Section "post")) }}"breadcrumb": {{ partial "meta_breadcrumb_json_ld.html" . }}{{ end }},
     "headline": {{ .Title }},
     "datePublished": {{ .PublishDate.Format "2006-01-02T15:04:05Z07:00" }},
     "dateModified": {{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }},
@@ -24,6 +25,7 @@
     {{ end -}}
     {{ else -}}
     "@type": "WebPage",
+    "breadcrumb": {{ partial "meta_breadcrumb_json_ld.html" . }},
     "url" : {{ .Permalink }},
     "name": {{ .Title }},
     {{ with $.Param "description" -}}
