--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -1,7 +1,7 @@
-{{ if or ($.Param "math") (.Page.Store.Get "math") (.HasShortcode "math") -}}
+{{- if or ($.Param "math") (.Page.Store.Get "math") (.HasShortcode "math") }}
 <link rel="stylesheet" href="{{ "katex/katex.min.css" | relURL }}">
 <script defer src="{{ "katex/katex.min.js" | relURL }}"></script>
 <script defer src="{{ "katex/contrib/auto-render.min.js" | relURL }}"></script>
-{{ $math := resources.Get "js/math.js" | minify | fingerprint -}}
+{{- $math := resources.Get "js/math.js" | minify | fingerprint }}
 <script defer src="{{ $math.RelPermalink }}"></script>
-{{ end -}}
+{{- end -}}
