--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,12 +1,12 @@
 {{ if not (eq .TranslationKey "404") -}}
   {{ if not .Description -}}
-    {{ warnf "Page '%s' does not have a description" .TranslationKey }}
+    {{ warnf "Page '%s' does not have a description" .TranslationKey -}}
   {{ else if lt (len .Description) 110  -}}
-    {{ warnf "Page '%s' description less than 110 characters" .TranslationKey }}
+    {{ warnf "Page '%s' description less than 110 characters" .TranslationKey -}}
   {{ else if gt (len .Description) 160  -}}
-    {{ warnf "Page '%s' description more than 160 characters" .TranslationKey }}
+    {{ warnf "Page '%s' description more than 160 characters" .TranslationKey -}}
   {{ end -}}
-{{ end -}}
+{{ end }}
 {{ range where .AlternativeOutputFormats "Name" "not in" (slice "nheaders" "nredirects" ) -}}
 <link rel="{{ .Rel }}" {{ printf "type=%q" .MediaType.Type | safeHTMLAttr }} title="{{ .Name }}" href="{{ .Permalink | safeURL }}">
 {{ end -}}
@@ -40,27 +40,31 @@
 {{ hugo.Generator }}
 <meta name="msapplication-TileColor" content="{{ $.Param "themecolor" | default "#ffffff" }}">
 <meta name="theme-color" content="{{ $.Param "themecolor" | default "#ffffff" }}">
-{{ with site.Params.piwikTrackerUrl }}<link rel="dns-prefetch" href="https://{{ . }}">{{ end }}
-{{ with $.Param "microusername" }}<link rel="me" href="https://micro.blog/{{ . }}">{{ end }}
+{{- with site.Params.piwikTrackerUrl }}
+<link rel="dns-prefetch" href="https://{{ . }}">
+{{ end -}}
+{{- with $.Param "microusername" }}
+<link rel="me" href="https://micro.blog/{{ . }}">
+{{ end -}}
 {{- $defaultCanonical := .Permalink -}}
 {{- if isset site.Params "defaultcanonical" -}}
   {{- $defaultCanonical = replace .Permalink site.BaseURL site.Params.defaultCanonical -}}
 {{- end -}}
-{{- if not (or (isset .Params "pagecanonical") (isset site.Params "pagecanonical")) -}}
+{{- if not (or (isset .Params "pagecanonical") (isset site.Params "pagecanonical")) }}
 <link rel="canonical" href="{{ $defaultCanonical }}">
-{{- else if $.Param "pageCanonical" -}}
+{{- else if $.Param "pageCanonical" }}
 <link rel="canonical" href="{{ $defaultCanonical }}">
-{{- else if $.Param "toCanonical" -}}
+{{- else if $.Param "toCanonical" }}
 <link rel="canonical" href="{{ $.Param "toCanonical" }}">
-{{- end -}}
+{{ end -}}
 {{ if .IsTranslated -}}
-{{ range .Translations }}
+{{- range .Translations }}
 <link rel="alternate" hreflang="{{ .Language.Params.LanguageCode | default .Lang }}" href="{{ .Permalink }}">
-{{ end -}}
-{{ end -}}
+{{- end -}}
+{{- end }}
 <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | relURL }}">
-{{ if $.Param "realfavicongenerator" -}}
+{{- if $.Param "realfavicongenerator" }}
 <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon-32x32.png" | relURL }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon-16x16.png" | relURL }}">
 <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
-{{ end -}}
+{{- end }}
