--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,50 +1,51 @@
 {{ $early := resources.Get "js/script-early.js" | minify | fingerprint -}}
 <script src="{{ $early.RelPermalink }}"></script>
 
-{{ if $.Param "alpine" -}}
-{{ $alpine := resources.Get "libs/alpine.min.js" | fingerprint -}}
+{{- if $.Param "alpine" -}}
+{{ $alpine := resources.Get "libs/alpine.min.js" | fingerprint }}
 <script defer src="{{ $alpine.RelPermalink }}"></script>
 {{ end -}}
 
-{{ if $.Param "jquery" -}}
-{{ $jquery := resources.Get "libs/jquery.slim.min.js" | fingerprint -}}
+{{- if $.Param "jquery" -}}
+{{ $jquery := resources.Get "libs/jquery.slim.min.js" | fingerprint }}
 <script defer src="{{ $jquery.RelPermalink }}"></script>
 {{ end -}}
 
-{{ if $.Param "umbrella" -}}
-{{ $umbrella := resources.Get "libs/umbrella.min.js" | fingerprint -}}
+{{- if $.Param "umbrella" -}}
+{{ $umbrella := resources.Get "libs/umbrella.min.js" | fingerprint }}
 <script defer src="{{ $umbrella.RelPermalink }}"></script>
 {{ end -}}
 
-{{ if $.Param "mobilemenu" -}}
-{{ $mobilemenu := resources.Get "js/mobile.js" | minify | fingerprint -}}
+{{- if $.Param "mobilemenu" -}}
+{{- $mobilemenu := resources.Get "js/mobile.js" | minify | fingerprint }}
 <script defer src="{{ $mobilemenu.RelPermalink }}"></script>
-{{ end -}}
+{{- end -}}
 
-{{ if $.Param "cookieconsent" -}}
-{{ $cookieconsent := resources.Get "js/cookieconsent.js" | minify | fingerprint -}}
+{{- if $.Param "cookieconsent" -}}
+{{- $cookieconsent := resources.Get "js/cookieconsent.js" | minify | fingerprint }}
 <script defer src="{{ $cookieconsent.RelPermalink }}"></script>
-{{ end -}}
+{{- end -}}
 
-{{ if $.Param "listsort" -}}
-{{ $listmin := resources.Get "libs/list.min.js" | fingerprint -}}
+{{- if $.Param "listsort" -}}
+{{- $listmin := resources.Get "libs/list.min.js" | fingerprint }}
 <script defer src="{{ $listmin.RelPermalink }}"></script>
-{{ $listsort := resources.Get "js/listsort.js" | fingerprint -}}
+{{- $listsort := resources.Get "js/listsort.js" | fingerprint }}
 <script defer src="{{ $listsort.RelPermalink }}"></script>
-{{ end -}}
+{{- end -}}
 
-{{ if .HasShortcode "contact" -}}
-{{ $contact := resources.Get "js/contact.js" | minify | fingerprint -}}
+{{- if .HasShortcode "contact" -}}
+{{- $contact := resources.Get "js/contact.js" | minify | fingerprint }}
 <script defer src="{{ $contact.RelPermalink }}"></script>
 {{ end -}}
 
-{{ if or (.HasShortcode "search") (or .Page.Params.enableSearch false) (eq .TranslationKey "404") -}}
-{{ $flexsearch := resources.Get "libs/flexsearch.compact.js" | fingerprint -}}
+{{- if or (.HasShortcode "search") (or .Page.Params.enableSearch false) (eq .TranslationKey "404") -}}
+{{- $flexsearch := resources.Get "libs/flexsearch.compact.js" | fingerprint }}
 <script defer src="{{ $flexsearch.RelPermalink }}"></script>
-{{ $search_opts := dict "minify" true "params" (dict "searchLimit" (site.Params.searchLimit | default 20)) -}}
-{{ $search := resources.Get "js/search.js" | js.Build $search_opts | fingerprint -}}
+{{- $search_opts := dict "minify" true "params" (dict "searchLimit" (site.Params.searchLimit | default 20)) -}}
+{{- $search := resources.Get "js/search.js" | js.Build $search_opts | fingerprint }}
 <script defer src="{{ $search.RelPermalink }}"></script>
-{{ end -}}
+{{- end -}}
 
-{{ $script := resources.Get "js/script.js" | minify | fingerprint -}}
+{{- $script := resources.Get "js/script.js" | minify | fingerprint }}
 <script defer src="{{ $script.RelPermalink }}"></script>
+{{- /* Remove trailing newlines */}}
