--- a/layouts/partials/meta_json_ld.html
+++ b/layouts/partials/meta_json_ld.html
@@ -8,11 +8,19 @@
   {{ end -}}
 {{- end -}}
 <script type="application/ld+json">
+{{- $blogSections := site.Params.blogSections | default (slice "blog" "post") }}
+{{- $breadcrumbSections := site.Params.breadcrumbSections | default (slice) }}
   {
     "@context": "https://schema.org",
     {{ if .IsPage -}}
-    "@type": {{ if or (eq .Section "blog") (eq .Section "post") }}"BlogPosting"{{ else }}"WebPage"{{ end }},
-    {{ if not (or (eq .Section "blog") (eq .Section "post")) }}"breadcrumb":{{ safeJS (partial "meta_breadcrumb_json_ld.html" .) }},{{ end }}
+    "@type": {{ if in $blogSections .Section -}}
+      "BlogPosting",
+      {{- else -}}
+      "WebPage",
+        {{- if in $breadcrumbSections .Section }}
+    "breadcrumb": {{ safeJS (partial "meta_breadcrumb_json_ld.html" .) }},
+        {{- end -}}
+      {{- end }}
     "headline": {{ .Title }},
     "datePublished": {{ .PublishDate.Format "2006-01-02T15:04:05Z07:00" }},
     "dateModified": {{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }},
@@ -25,7 +33,9 @@
     {{ end -}}
     {{ else -}}
     "@type": "WebPage",
+      {{- if in $breadcrumbSections .Section }}
     "breadcrumb": {{ safeJS (partial "meta_breadcrumb_json_ld.html" .) }},
+      {{- end }}
     "url" : {{ .Permalink }},
     "name": {{ .Title }},
     {{ with $.Param "description" -}}
