Use RelPermalink unless otherwise required
See
<https://discourse.gohugo.io/t/best-practice-for-css-links-relpermalink-permalink-or-either/44038/3>
gitlint-ignore: all

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/shortcodes/embed-pdf.html
+++ b/layouts/shortcodes/embed-pdf.html
@@ -40,7 +40,7 @@
     {{- end -}}
   {{- end -}}
   {{- if $dataResource -}}
-    {{- $dataResourceLink = $dataResource.Permalink -}}
+    {{- $dataResourceLink = $dataResource.RelPermalink -}}
     {{- if and $fragment $dataResourceLink -}}
       {{- $dataResourceLink = printf "%s#%s" $dataResourceLink $fragment -}}
     {{- end -}}
